force-app/main/default/objects/Workspace_Info__c/Workspace_Info__c.object-meta.xml
<CustomObject>
    <label>Workspace Info</label>
    <nameField>
        <label>Workspace Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workspace Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>