force-app/main/default/objects/Workspace_Info__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>