force-app/main/default/objects/Workspace_Info__c/fields/WorkSpace__c.field-meta.xml
<CustomField>
    <fullName>WorkSpace__c</fullName>
    <label>WorkSpace</label>
    <referenceTo>WorkSpace__c</referenceTo>
    <relationshipLabel>Workspace Info</relationshipLabel>
    <relationshipName>WorkspaceInfo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>