force-app/main/default/objects/Workspace_Info__c/fields/Workspace_No__c.field-meta.xml
<CustomField>
    <fullName>Workspace_No__c</fullName>
    <label>Workspace No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>