force-app/main/default/objects/Workspace_Info__c/fields/WorkspaceAvailability__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceAvailability__c</fullName>
    <label>Workspace Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>