force-app/main/default/objects/Workspace_Info__c/fields/WorkspaceType__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceType__c</fullName>
    <label>Workspace Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabin</fullName>
            </value>
            <value>
                <fullName>Meeting Room</fullName>
            </value>
            <value>
                <fullName>Desk</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>