force-app/main/default/objects/Workspace_Info__c/fields/XCoordinate__c.field-meta.xml
<CustomField>
    <fullName>XCoordinate__c</fullName>
    <label>X Coordinate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>