force-app/main/default/objects/Workspace_Info__c/fields/YCoordinate__c.field-meta.xml
<CustomField>
    <fullName>YCoordinate__c</fullName>
    <label>Y Coordinate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>